--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   db:
-    image: mariadb
+    image: mariadb:10.7
     command: --max-allowed-packet=64MB
     restart: always
     volumes:
@@ -33,6 +33,7 @@ services:
       - ./matomo.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - 80:80
+      - 443:443
 
 volumes:
   db:
