--- a/matomo.conf
+++ b/matomo.conf
@@ -4,6 +4,9 @@ upstream php-handler {
 
 server {
 	listen 80;
+	listen              443 ssl;
+	ssl_certificate     "/var/applications/apache/ssl/wildcard.sig.rennesmetropole.fr/sig.rennesmetropole.fr.crt.txt";
+	ssl_certificate_key "/var/applications/apache/ssl/wildcard.sig.rennesmetropole.fr/wildcard-sig.key";
 
 	add_header Referrer-Policy origin; # make sure outgoing links don't show the URL to the Matomo instance
 	root /var/www/html; # replace with path to your matomo instance
